移除模板作者信息2

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ footer:
 author: 'KyonN'
 nickname: 'wxc'
 bio: '普通水平软件工程师'
-avatar: '/assets/img/pig.png'
+avatar: '/assets/img/pig.jpg'
 
 # Search
 search: true
